@@ -8,6 +8,7 @@ Version 1.11.14+dev:
      [modify_side] color= unless a new flag set is also provided.
    * Fix a bug where in movement records, "skip_sighted" was sometimes
      spelled as "skip_sighed".
+   * Remove 'allow_new_game=no' entries from random map new game list
 
 Version 1.11.14:
  * Campaigns:
